<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_yolo2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tuyen.TempleFoodSelector.Randomizer"
    tools:showIn="@layout/activity_randomize2">

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="You have selected: "
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="?android:attr/colorPressedHighlight"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maps"
        android:layout_below="@+id/place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        android:id="@+id/randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re-Roll"
        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/maps"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
