<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choosing_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Hispanic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Halal"
        android:layout_alignRight="@+id/Halal"
        android:layout_alignEnd="@+id/Halal"
        android:layout_marginTop="54dp"
        android:id="@+id/HispanicButton" />

    <Button
...
